--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -13,3 +24,7 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# Misc
+*.stg
+*.graphml
